# sui-vanity-addresses

./: .gitignore  Cargo.toml  README.md
src/: main.rs
